share/remf-create-env-terraform/remf/k8s/apps/racingcaranimation/racingcaranimation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: racingcaranimation
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: racingcaranimation
