share/remf-create-env-terraform/remf/k8s/apps/racingcaranimation/racingcaranimation-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: racingcaranimation
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app3.remf.net.br`)
      services:
        - name: racingcaranimation
          port: 80
  tls:
    certResolver: aws
